Usage statistics updated

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -113,7 +113,7 @@
 
 <ul class="sidebar-panel nav">
   <br/><br/>  <li class="sidetitle">MAIN</li>
-
+  <li><a href="#/admin/dashboard"><span class="icon color5"><i class="fa fa-home"></i></span>Dashboard</a></li>
   <li><a href="javascript:void(0);"><span class="icon color7"><i class="fa fa-user"></i></span> User Profile<span class="caret"></span></a>
     <ul>
       <li><a href="#/admin/user/profile">Update Profile</a></li>
@@ -296,6 +296,13 @@ Below codes are only for index widgets
 Below codes are only for index widgets
 ================================================ -->
 <script type="text/javascript" src="js/application/image-crop/ng-img-crop.js"></script>
+
+<!-- d3 -->
+<script src="js/rickshaw/d3.v3.js"></script>
+<!-- main file -->
+<script src="js/rickshaw/rickshaw.js"></script>
+<!-- demo codes -->
+<script src="js/rickshaw/rickshaw-plugin.js"></script>
 
 </body>
 </html>
