--- a/HTML/conferencing.html
+++ b/HTML/conferencing.html
@@ -278,10 +278,14 @@ Angular Includes
 <!-- =============================================================================
 WebRTC specific
 ================================================================================-->
-<script type="text/javascript" src="https://demo.socialvid.in/js/client.js"></script>
+<!--<script type="text/javascript" src="https://demo.socialvid.in/js/client.js"></script>-->
+<script type="text/javascript" src="https://ha.socialvid.in/js/client.js"></script>
 <!--<script type="text/javascript" src="js/application/webrtc/webrtc-script.js"></script>-->
 <script type="text/javascript" src="js/application/controllers/conference-video.js"></script>
 <script type="text/javascript" src="js/application/controllers/conference_guest_join_controller.js"></script>
 <script type="text/javascript" src="js/application/controllers/conference_chat_controller.js"></script>
+<script type="text/javascript" src="js/application/controllers/conference_video_students.js"></script>
+<script type="text/javascript" src="js/application/controllers/conference_video_teacher.js"></script>
+
 </body>
 </html>
