--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Social bean is a analogy for seamless video conference.">
-  <meta name="keywords" content="socialbean, video, conference" />
-  <title>SocialBean - Providing seamless video conference</title>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Social bean is a analogy for seamless video conference.">
+    <meta name="keywords" content="socialbean, video, conference"/>
+    <title>SocialBean - Providing seamless video conference</title>
 
-  <!-- ========== Css Files ========== -->
-  <link href="css/root.css" rel="stylesheet">
+    <!-- ========== Css Files ========== -->
+    <link href="css/root.css" rel="stylesheet">
 
 
-  </head>
-  <body  ng-app="myApp">
-  <!-- Start Page Loading -->
-  <div class="loading"><img src="img/loading.gif" alt="loading-img"></div>
-  <!-- End Page Loading -->
- <!-- //////////////////////////////////////////////////////////////////////////// --> 
-  <!-- START TOP -->
-  <div id="top" class="clearfix">
+</head>
+<body ng-app="myApp">
+<!-- Start Page Loading -->
+<div class="loading"><img src="img/loading.gif" alt="loading-img"></div>
+<!-- End Page Loading -->
+<!-- //////////////////////////////////////////////////////////////////////////// -->
+<!-- START TOP -->
+<div id="top" class="clearfix">
 
     <!-- Start App Logo -->
     <div class="applogo">
-      <a href="index.html" class="logo"><img src="img/logo_small.jpg"/></a>
+        <a href="index.html" class="logo"><img src="img/logo_small.jpg"/></a>
     </div>
     <!-- End App Logo -->
 
@@ -60,125 +60,133 @@
     <ul class="top-right">
 
 
+        <!--<li class="dropdown link">
+          <a href="#" data-toggle="dropdown" class="dropdown-toggle hdbutton">Create New <span class="caret"></span></a>
+            <ul class="dropdown-menu dropdown-menu-list">
+              <li><a href="#"><i class="fa falist fa-paper-plane-o"></i>Product or Item</a></li>
+              <li><a href="#"><i class="fa falist fa-font"></i>Blog Post</a></li>
+              <li><a href="#"><i class="fa falist fa-file-image-o"></i>Image Gallery</a></li>
+              <li><a href="#"><i class="fa falist fa-file-video-o"></i>Video Gallery</a></li>
+            </ul>
+        </li>-->
 
-    <!--<li class="dropdown link">
-      <a href="#" data-toggle="dropdown" class="dropdown-toggle hdbutton">Create New <span class="caret"></span></a>
-        <ul class="dropdown-menu dropdown-menu-list">
-          <li><a href="#"><i class="fa falist fa-paper-plane-o"></i>Product or Item</a></li>
-          <li><a href="#"><i class="fa falist fa-font"></i>Blog Post</a></li>
-          <li><a href="#"><i class="fa falist fa-file-image-o"></i>Image Gallery</a></li>
-          <li><a href="#"><i class="fa falist fa-file-video-o"></i>Video Gallery</a></li>
-        </ul>
-    </li>-->
+        <!-- Start Searchbox -->
+        <!-- <form class="searchform">
+           <input type="text" class="searchbox" id="searchbox" placeholder="Search">
+           <span class="searchbutton"><i class="fa fa-search"></i></span>
+         </form>-->
 
-    <!-- Start Searchbox -->
-   <!-- <form class="searchform">
-      <input type="text" class="searchbox" id="searchbox" placeholder="Search">
-      <span class="searchbutton"><i class="fa fa-search"></i></span>
-    </form>-->
+        <!--<li class="link">
+          <a href="#" class="notifications">6</a>
+        </li>-->
 
-    <!--<li class="link">
-      <a href="#" class="notifications">6</a>
-    </li>-->
-
-    <li class="dropdown link" ng-controller="headerBarController">
-      <a href="javascript:void(0);" data-toggle="dropdown" class="dropdown-toggle profilebox">
-        <img ng-show="userProfile.imageBlob" ng-src="{{userProfile.imageBlob}}" alt="alt">
-        <img ng-show="!userProfile.imageBlob" src="img/defaultimg.png" alt="img">
-        <b>{{username}}</b>
-        <span class="caret"></span>
-      </a>
-        <ul class="dropdown-menu dropdown-menu-list dropdown-menu-right">
-          <li role="presentation" class="dropdown-header">Profile</li>
-          <!--<li><a href="#"><i class="fa falist fa-inbox"></i>Inbox<span class="badge label-danger">4</span></a></li>
-          <li><a href="#"><i class="fa falist fa-file-o"></i>Files</a></li>
-          <li><a href="#"><i class="fa falist fa-wrench"></i>Settings</a></li>
-          <li class="divider"></li>
-          <li><a href="#"><i class="fa falist fa-lock"></i> Lockscreen</a></li>-->
-          <li><a ng-click="logout()"><i class="fa falist fa-power-off"></i> Logout</a></li>
-        </ul>
-    </li>
+        <li class="dropdown link" ng-controller="headerBarController">
+            <a href="javascript:void(0);" data-toggle="dropdown" class="dropdown-toggle profilebox">
+                <img ng-show="userProfile.imageBlob" ng-src="{{userProfile.imageBlob}}" alt="alt">
+                <img ng-show="!userProfile.imageBlob" src="img/defaultimg.png" alt="img">
+                <b>{{username}}</b>
+                <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-list dropdown-menu-right">
+                <li role="presentation" class="dropdown-header">Profile</li>
+                <!--<li><a href="#"><i class="fa falist fa-inbox"></i>Inbox<span class="badge label-danger">4</span></a></li>
+                <li><a href="#"><i class="fa falist fa-file-o"></i>Files</a></li>
+                <li><a href="#"><i class="fa falist fa-wrench"></i>Settings</a></li>
+                <li class="divider"></li>
+                <li><a href="#"><i class="fa falist fa-lock"></i> Lockscreen</a></li>-->
+                <li><a ng-click="logout()"><i class="fa falist fa-power-off"></i> Logout</a></li>
+            </ul>
+        </li>
 
     </ul>
     <!-- End Top Right -->
 
-  </div>
-  <!-- END TOP -->
- <!-- //////////////////////////////////////////////////////////////////////////// --> 
+</div>
+<!-- END TOP -->
+<!-- //////////////////////////////////////////////////////////////////////////// -->
 
 
-<!-- //////////////////////////////////////////////////////////////////////////// --> 
+<!-- //////////////////////////////////////////////////////////////////////////// -->
 <!-- START SIDEBAR -->
 <div class="sidebar clearfix">
 
-<ul class="sidebar-panel nav">
-  <br/><br/>  <li class="sidetitle">MAIN</li>
-  <li><a href="#/admin/dashboard"><span class="icon color5"><i class="fa fa-home"></i></span>Dashboard</a></li>
-  <li><a href="javascript:void(0);"><span class="icon color7"><i class="fa fa-user"></i></span> User Profile<span class="caret"></span></a>
-    <ul>
-      <li><a href="#/admin/user/profile">Update Profile</a></li>
+    <ul class="sidebar-panel nav">
+        <br/><br/>
+        <li class="sidetitle">MAIN</li>
+        <li><a href="#/admin/dashboard"><span class="icon color5"><i class="fa fa-home"></i></span>Dashboard</a></li>
+        <li><a href="javascript:void(0);"><span class="icon color7"><i class="fa fa-user"></i></span> User Profile<span
+                class="caret"></span></a>
+            <ul>
+                <li><a href="#/admin/user/profile">Update Profile</a></li>
+            </ul>
+        </li>
+        <li><a href="javascript:void(0);"><span class="icon color8"><i class="fa fa-clock-o"></i></span>Manage
+            Meetings<span class="caret"></span></a>
+            <ul>
+                <li><a href="#/admin/class/create">Schedule Meeting</a></li>
+                <li><a href="#/admin/class/quick">Quick Meeting</a></li>
+            </ul>
+        </li>
+        <li><a href="javascript:void(0);"><span class="icon color8"><i class="fa fa-calendar-o"></i></span>View Meetings<span
+                class="caret"></span></a>
+            <ul>
+                <li><a href="#/admin/class/upcoming">Upcoming Meeting</a></li>
+                <li><a href="#/admin/class/past">Past Meetings</a></li>
+            </ul>
+        </li>
     </ul>
-  </li>
-  <li><a href="javascript:void(0);"><span class="icon color8"><i class="fa fa-calendar-o"></i></span>Schedule Class<span class="caret"></span></a>
-    <ul>
-      <li><a href="#/admin/class/create">Create Class</a></li>
-      <li><a href="#/admin/class/upcoming">Upcoming Class</a></li>
-      <li><a href="#/admin/class/past">Past Classes</a></li>
+
+    <!--<ul class="sidebar-panel nav">
+      <li class="sidetitle">MORE</li>
+      <li><a href="grid.html"><span class="icon color15"><i class="fa fa-columns"></i></span>Grid System</a></li>
+      <li><a href="maps.html"><span class="icon color7"><i class="fa fa-map-marker"></i></span>Maps</a></li>
+      <li><a href="customizable.html"><span class="icon color10"><i class="fa fa-lightbulb-o"></i></span>Customizable</a></li>
+      <li><a href="helper-classes.html"><span class="icon color8"><i class="fa fa-code"></i></span>Helper Classes</a></li>
+      <li><a href="changelogs.html"><span class="icon color12"><i class="fa fa-file-text-o"></i></span>Changelogs</a></li>
     </ul>
-  </li>
-</ul>
 
-<!--<ul class="sidebar-panel nav">
-  <li class="sidetitle">MORE</li>
-  <li><a href="grid.html"><span class="icon color15"><i class="fa fa-columns"></i></span>Grid System</a></li>
-  <li><a href="maps.html"><span class="icon color7"><i class="fa fa-map-marker"></i></span>Maps</a></li>
-  <li><a href="customizable.html"><span class="icon color10"><i class="fa fa-lightbulb-o"></i></span>Customizable</a></li>
-  <li><a href="helper-classes.html"><span class="icon color8"><i class="fa fa-code"></i></span>Helper Classes</a></li>
-  <li><a href="changelogs.html"><span class="icon color12"><i class="fa fa-file-text-o"></i></span>Changelogs</a></li>
-</ul>
-
-<div class="sidebar-plan">
-  Pro Plan<a href="#" class="link">Upgrade</a>
-  <div class="progress">
-  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-  </div>
-</div>
-<span class="space">42 GB / 100 GB</span>
-</div>-->
+    <div class="sidebar-plan">
+      Pro Plan<a href="#" class="link">Upgrade</a>
+      <div class="progress">
+      <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+      </div>
+    </div>
+    <span class="space">42 GB / 100 GB</span>
+    </div>-->
 
 </div>
 <!-- END SIDEBAR -->
-<!-- //////////////////////////////////////////////////////////////////////////// --> 
+<!-- //////////////////////////////////////////////////////////////////////////// -->
 
- <!-- //////////////////////////////////////////////////////////////////////////// --> 
+<!-- //////////////////////////////////////////////////////////////////////////// -->
 <!-- START CONTENT -->
 <div class="content">
 
-  <div ng-view></div>
+    <div ng-view></div>
 
 
-<!-- END CONTAINER -->
- <!-- //////////////////////////////////////////////////////////////////////////// -->
+    <!-- END CONTAINER -->
+    <!-- //////////////////////////////////////////////////////////////////////////// -->
 
-<!-- Start Footer -->
-<div class="row footer">
-  <div class="col-md-6 text-left">
-  Copyright © 2015 SocialBean.
-  </div>
-  <div class="col-md-6 text-right">
-    Crafted with <i class="fa fa-heart color10"></i> in India.
-  </div> 
-</div>
-<!-- End Footer -->
+    <!-- Start Footer -->
+    <div class="row footer">
+        <div class="col-md-6 text-left">
+            Copyright © 2015 SocialBean.
+        </div>
+        <div class="col-md-6 text-right">
+            Crafted with <i class="fa fa-heart color10"></i> in India.
+        </div>
+    </div>
+    <!-- End Footer -->
 
 
 </div>
 <!-- End Content -->
- <!-- //////////////////////////////////////////////////////////////////////////// --> 
+<!-- //////////////////////////////////////////////////////////////////////////// -->
 
 
 <!-- END SIDEPANEL -->
-<!-- //////////////////////////////////////////////////////////////////////////// --> 
+<!-- //////////////////////////////////////////////////////////////////////////// -->
 
 
 <!-- ================================================
@@ -204,6 +212,7 @@ Bootstrap Core JavaScript File
 <script type="text/javascript" src="js/application/controllers/upcoming_class_controller.js"></script>
 <script type="text/javascript" src="js/application/controllers/header_bar_controller.js"></script>
 <script type="text/javascript" src="js/application/controllers/user_profile_controller.js"></script>
+<script type="text/javascript" src="js/application/controllers/quick_meeting_controller.js"></script>
 
 <!-- ================================================
 Plugin.js - Some Specific JS codes for Plugin Settings
