Quick meeting summary page added.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -213,6 +213,7 @@ Bootstrap Core JavaScript File
 <script type="text/javascript" src="js/application/controllers/header_bar_controller.js"></script>
 <script type="text/javascript" src="js/application/controllers/user_profile_controller.js"></script>
 <script type="text/javascript" src="js/application/controllers/quick_meeting_controller.js"></script>
+<script type="text/javascript" src="js/application/controllers/quick_meeting_summary.js"></script>
 
 <!-- ================================================
 Plugin.js - Some Specific JS codes for Plugin Settings
