Integration of conference ui with the app ui done

--- a/HTML/conferencing.html
+++ b/HTML/conferencing.html
@@ -274,6 +274,8 @@ Angular Includes
 <script type="text/javascript" src="js/angular/angular.min.js"></script>
 <script type="text/javascript" src="js/angular/angular-route.min.js"></script>
 <script type="text/javascript" src="js/application/app.js"></script>
+<script type="text/javascript" src="js/application/constants.js"></script>
+<script type="text/javascript" src="js/application/services.js"></script>
 
 <!-- =============================================================================
 WebRTC specific
