--- a/HTML/login.html
+++ b/HTML/login.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Social bean is a analogy for seamless video conference.">
-    <meta name="keywords" content="socialbean, video, conference" />
-    <title>SocialBean - Providing seamless video conference</title>
+    <meta name="keywords" content="consocio, video, conference" />
+    <title>ConSocio - Providing seamless video conference</title>
 
   <!-- ========== Css Files ========== -->
   <link href="css/root.css" rel="stylesheet">
@@ -32,6 +32,8 @@
     <!-- Angular JS Imports -->
     <script type="text/javascript" src="js/angular/angular.min.js"></script>
     <script type="text/javascript" src="js/angular/angular-route.min.js"></script>
+    <script type="text/javascript" src="js/application/client-customizations.js"></script>
+    <script type="text/javascript" src="js/application/client-constants.js"></script>
     <script type="text/javascript" src="js/application/app.js"></script>
     <script type="text/javascript" src="js/application/constants.js"></script>
     <script type="text/javascript" src="js/application/services.js"></script>
