--- a/HTML/conferencing.html
+++ b/HTML/conferencing.html
@@ -276,7 +276,7 @@ Angular Includes
 <script type="text/javascript" src="js/application/client-customizations.js"></script>
 <script type="text/javascript" src="js/application/client-constants.js"></script>
 <script type="text/javascript" src="js/application/app.js"></script>
-<script type="text/javascript" src="js/application/constants.js"></script>
+<!--<script type="text/javascript" src="js/application/constants.js"></script>-->
 <script type="text/javascript" src="js/application/services.js"></script>
 
 <!-- =============================================================================
