--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="ConSocio is a analogy for seamless video conference.">
-    <meta name="keywords" content="consocio, video, conference"/>
-    <title>ConSocio - Providing seamless video conference</title>
+    <meta name="description" content="ConnSocio is a analogy for seamless video conference.">
+    <meta name="keywords" content="connsocio, video, conference"/>
+    <title>ConnSocio - Providing seamless video conference</title>
 
     <!-- ========== Css Files ========== -->
     <link href="css/root.css" rel="stylesheet">
@@ -171,7 +171,7 @@
     <!-- Start Footer -->
     <div class="row footer">
         <div class="col-md-6 text-left">
-            Copyright © 2016 ConSocio.
+            Copyright © 2016 ConnSocio.
         </div>
         <div class="col-md-6 text-right">
             Crafted with <i class="fa fa-heart color10"></i> in India.
