--- a/HTML/login.html
+++ b/HTML/login.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Social bean is a analogy for seamless video conference.">
-    <meta name="keywords" content="consocio, video, conference" />
-    <title>ConSocio - Providing seamless video conference</title>
+    <meta name="keywords" content="connsocio, video, conference" />
+    <title>ConnSocio - Providing seamless video conference</title>
 
   <!-- ========== Css Files ========== -->
   <link href="css/root.css" rel="stylesheet">
