1. Added Self View functionality. 2. Presenter URL not working bug solved. 3. Connsocio Name. 4. 2 or more client can log in to different meetings.

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 <button onclick="chat()"> Chat</button>
 </body>
 <script>
-    var server = "ha.socialvid.in";
+    var server = "nstl.socialvid.in";
     var callback = function (msg) {
         //callback
         console.log('in the server callback console.');
