--- a/HTML/conferencing.html
+++ b/HTML/conferencing.html
@@ -197,9 +197,8 @@
             <div class="gn-title">LOGGED IN</i></div>
             <ul id="active-participants" class="group">
                 <li class="member" ng-repeat="participant in participantsArray">
-                    <a href="#"><img src="img/default-user.png" alt="img">
+                    <a href="javascript:void(0)"><img src="img/default-user.png" alt="img">
                         <b>{{participant.name}}</b>
-                        <!--<b>{{message.chat}}</b>-->
                     </a>
                     <span class="status online"></span>
                 </li>
@@ -225,7 +224,7 @@
                 <li class="member"><a href="#"><img src="img/profileimg3.png" alt="img"><b>Fred Stonefield</b>New
                     York</a><span class="status away"></span></li>-->
                 <li class="member" id="{{message.id}}" ng-repeat="message in chatsHistoryArray">
-                    <a href="#"><img src="img/default-user.png" alt="img">
+                    <a href="javascript:void(0)"><img src="img/default-user.png" alt="img">
                         {{message.name}}
                         <b>{{message.chat}}</b>
                     </a>
