--- a/HTML/conferencing.html
+++ b/HTML/conferencing.html
@@ -194,14 +194,25 @@
                     team</label>
                 </li>
             </ul>-->
-            <div class="gn-title">LOGGED IN</i></div>
+            <div class="gn-title">LOGGED IN </i></div>
             <ul id="active-participants" class="group">
                 <li class="member" ng-repeat="participant in participantsArray">
                     <a href="javascript:void(0)"><img src="img/default-user.png" alt="img">
                         <b>{{participant.name}}</b>
-                        <i class="fa fa-volume-off" ng-show="participant.audio === 'muted'" ng-click="unmuteTheAtteendee(participant.id)"></i>
-                        <i class="fa fa-volume-up" ng-show="participant.audio === 'unmuted'" ng-click="muteTheAtteendee(participant.id)"></i>
-                        <i class="fa fa-hand-o-up" ng-show="participant.raiseHand"></i>
+                        <!--Enabling clicks for only the presenter-->
+                        <div ng-show="participant.clientName === 'PRESENTER'">
+                            <i class="fa fa-volume-off" ng-show="participant.audio === 'muted'" ng-click="unmuteTheAtteendee(participant.id)"></i>
+                            <i class="fa fa-volume-up" ng-show="participant.audio === 'unmuted'" ng-click="muteTheAtteendee(participant.id)"></i>
+                            <i class="fa fa-hand-o-up" ng-show="participant.raiseHand"></i>
+                        </div>
+
+                        <!--Enabling read only view for non presenter-->
+                        <div ng-show="participant.clientName !== 'PRESENTER'">
+                            <i class="fa fa-volume-off" ng-show="participant.audio === 'muted'"></i>
+                            <i class="fa fa-volume-up" ng-show="participant.audio === 'unmuted'"></i>
+                            <i class="fa fa-hand-o-up" ng-show="participant.raiseHand"></i>
+                        </div>
+
                     </a>
                     <span class="status online"></span>
                 </li>
