--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,6 +10,7 @@
 
     <!-- ========== Css Files ========== -->
     <link href="css/root.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
 
 
 </head>
