Added socialvid plugin if its is not installed

--- a/HTML/notifications.html
+++ b/HTML/notifications.html
@@ -271,7 +271,7 @@
           </a>
           <script>
             document.querySelector('#button2').onclick = function(){
-              swal("Here's a message!", "It's pretty, isn't it?")
+              swal("<a href='404.html'> abc </a>")
             };
           </script>
         </div>
